# redis-mongodb-benchmark

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
benchmark/: common.py  mongo.py  redis.py
tests/: test_mongo.py  test_redis.py
