[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Alexey Dubrov <vhsw@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"
pymongo = "^3.11.0"
faker = "^4.1.4"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
pytest-benchmark = {extras = ["histogram"], version = "^3.2.3"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
